 Version 0.47
 ============

 Released on 

 New features and improvements:

   - ofaOpeTemplateHelp: uses myIDialog interface, is globally unique.

 Bug fixes:

   - ofaOpeTemplateProperties::on_account_selection(): cast to MY_IDIALOG.

 Other changes:

   - my_idialog_present(): returns the actually shown instance.
   - myIDialog::idialog_get_identifier(): defaults to implementation type name.
   - ofaAccountChartBin: remove obsoleted class.

-----------------------------------------------------------------------
 Version 0.46
 ============

 Released on 2016-01-28

 New features and improvements:

   - LedgerSummaryRender: have a summary per ledger (todo #729).
   - OpeGuidedInput: make the dialog non-modal (todo #653).
   - OpeTemplateHelp: make the dialog non-modal (todo #621).
   - OpeTemplateProperties: make the dialog non-modal (todo #653).

 Bug fixes:

   - 

 Other changes:

   - myIDialog: new interface for non-modal management.

-----------------------------------------------------------------------
 Version 0.45
 ============

 Released on 2016- 1-24.

 New features and improvements:

   - ofaBatTreeview: add unused count to page (todo #754).
   - ofaHub: new hub management class (todo #948).
   - ofaICollectionable, ofaICollector: new interfaces.
   - ofaIExeCloseClose: new interface for exercice closing in the plugins.
   - ofaIHubber: new interface for ofaHub management (todo #941).
   - TVA: compute the VAT rules (todo #311).
   - ExerciceClosing: let the plugins do their tasks (todo #965).

 Bug fixes:

   - 

 Other changes:

   - core/ofo-marshal.def: remove obsoleted file (todo #962).
   - ofa_idbmodel_get_by_name(): new method.
   - ofaAccountSelectorBin: removed unused class.
   - ofaCollection: removed class.
   - ofaConcilCollection: removed class.
   - ofaIDataset: removed obsolete interface (todo #957).
   - ofa_dossier_misc_import_csv(): removed function.
   - ofa_ledger_treeview_get_top_focusable_widget(): removed method.