@@ -35,7 +35,9 @@
 
    - my_idialog_present(): returns the actually shown instance.
    - myIDialog::idialog_get_identifier(): defaults to implementation type name.
+   - myTabLabel: have a new 'detach' button on the tab.
    - ofaAccountChartBin: remove obsoleted class.
+   - ofaNomodalPage: new window class to be able to detach the theme pages.
 
 -----------------------------------------------------------------------
  Version 0.46
